--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,12 +1,20 @@
+// 配置全局主题色
+$themeColor: #2f97ec;
+
+// flex竖向
 .flex-col {
   display: flex;
   flex-direction: column;
 }
-
+// flex横向
 .flex-align {
   display: flex;
   align-items: center;
 }
 
+// 全局隐藏滚动条
+html,body{ width: 100%; height: 100%; overflow: scroll;}
+html::-webkit-scrollbar, body::-webkit-scrollbar{width:0px;height:0px;}
+body{margin:0;}
 
-$themeColor: #2f97ec;
+
